added a color palette

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html, body {
   font-family: system-ui, Segoe UI, Helvetica Neue, Arial;
   margin: 0;
@@ -14,6 +20,14 @@ html, body {
   --baseline : 30px;
 
   --color-dark-gray: #212121;
+  /* color palette */
+  --blue: rgb(30, 59, 82); /* #1E3C54 */
+  --blue-sec-1: rgb(51, 80, 105); /* #325068 */
+  --blue-sec-2: rgb(186, 202, 215); /* pitch footer darker light blue */
+  --blue-sec-3: rgb(193, 208, 220); /* #c1d0dc */
+  --blue-sec-4: rgb(208, 221, 232); /* pitch footer lighter light blue */
+  --blue-sec-5: rgb(213, 224, 233); /* #d5e0e9 */
+  --red: rgb(209, 63, 63); /* #D13F3F */
 }
 
 img {
